--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rockpaperscissorstwo",
   "version": "1.0.0",
   "description": "Rock Paper Scissors, Two!",
-  "main": "index.js",
+  "main": "bot/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,10 @@
   },
   "homepage": "https://github.com/vacuousVersifer/RockPaperScissorsTwo#readme",
   "dependencies": {
+    "discord.js": "12.0.0",
+    "discord.js-commando": "0.12.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
